crates/wxctl/src/output/snapshots/wxctl__output__error_snapshots_test__schema_error_v003_plain_80.snap
---
source: crates/wxctl/src/output/error_snapshots_test.rs
expression: "schema_error_screen(&panel(80, ColorMode::Plain, GlyphSet::Unicode))"
---
✗ agent/churn_agent · WXCTL-V003
  ▌ Errors

    ✗ agent/churn_agent  WXCTL-V003
      field name
      Missing required field: name
      fix add `name:` to the resource (see `wxctl explain <kind>`)
